--- a/mystyle.css
+++ b/mystyle.css
@@ -71,3 +71,10 @@ article{
     padding-right: 30px;
     text-align: justify;
 }
+
+.quote{
+    padding: 5px;
+    list-style-type: circle;
+    margin-top: -50px;
+    margin-left: 360px;
+}
