--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,6 @@
+body{
+    font-family:sans-serif;
+}
 .heading{
     background-color: rgb(98, 235, 216); 
     padding: 40px; text-align: center;
@@ -10,8 +13,9 @@
 }
 
 .heading_2{
-    text-decoration-line: underline;
+    text-decoration-line:none;
     padding-top: 10px;
+    font-style: normal;
 }
 
 .section{
@@ -84,7 +88,7 @@ article{
 .ul_1 li a {
     text-decoration: none;
     color: #000; 
-    padding: 0px 10px;
+    padding: 2px 10px;
     display: inline-block;
 }
 
