--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,5 @@
 body{
-    font-family:sans-serif;
+    font-family:'Times New Roman', Times, serif;
 }
 .heading{
     background-color: rgb(98, 235, 216); 
@@ -19,11 +19,12 @@ body{
 }
 
 .section{
-    padding: 60px;
+    padding: 60px 60px 500px 60px;
     width: 200px;
-    float: left;
-    background-color: rgb(250, 255, 255);
+    float:left;
+    background-color: rgb(255, 255, 255);
     align-content: center;
+    height:100%;
 }
 
 img{
