--- a/mystyle.css
+++ b/mystyle.css
@@ -1,121 +1,59 @@
-body{
-    font-family:'Times New Roman', Times, serif;
-}
-
 .container{
     display: grid;
     grid-template-areas: 
-    "heading heading"
-    "section article"
-    "section Footer";
-    grid-template-columns: 1fr 3fr;
-    grid-template-rows: 1fr;
+    "big big big big big"
+    "menu content content content content"
+    "menu Footer Footer Footer Footer";
+    grid-template-columns: 300px auto;
+    grid-template-rows:auto auto;
+    gap: 2px;
 }
 
-.heading {grid-area: heading;}
-.section {grid-area: section;}
-.article {grid-area: article;}
-.Footer {grid-area: Footer;}
-
-.heading{
-    background-color: rgb(98, 235, 216); 
-    padding: 40px; text-align: center;
-    max-height: 100px;
-    width:auto;
+.container > div {
+    color: #000;
+    word-wrap: break-word;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    line-height: 1.5;
+    letter-spacing: 0.5px;
 }
 
-.heading_1{
-    color: rgb(5, 5, 46);
+.big { grid-area: big;}
+.menu { grid-area: menu;}
+.content{ grid-area: content;}
+.Footer { grid-area: Footer;}
+
+.big{
+    padding: 10px;
+    background-color: aliceblue;
+    padding: 50px;
 }
 
-.heading_2{
-    text-decoration-line:none;
-    padding-top: 10px;
-    font-style: normal;
+.menu{
+    padding: 50px;
 }
 
-.section{
-    padding: 60px 60px 500px 60px;
-    width: 200px;
-    float:left;
-    background-color: rgb(255, 255, 255);
-    align-content: center;
-    height:auto;
+.content{
+    padding: 30px;
+    margin-right: 50px;
+    text-align: justify;
+}
+
+
+.Footer{
+    padding: 10px;
 }
 
 img{
-    height: 250px;
-    width: 200px;
+    width: 150px;
+    height: 200px;
+    padding-bottom: 50px;
+    align-items: center;
 }
 
-.art,.main_one{
-    display: flex;
-    padding: 40px;
-}
-
-.ul_1{
-    margin-left: -35px;
-    padding: 30px;
-    list-style-type: none;
-}
-
-.section{
-    max-height:fit-content;
-}
-
-p{
-    margin-top: -70px;
-    line-height: 25px;
-}
-
-.list{
-    padding: 5px;
-    list-style-type: circle;
-    margin-top: -50px;
-    margin-left: 340px;
-}
-
-.ind{
-    display: flex;
-    padding: 40px;
-    margin-left: -40px;
-}
-
-.mar{
-    display: flex;
-    padding: 40px;
-    margin-left: 280px;
-}
-
-article{
-    padding-right: 30px;
-    padding-bottom: 0%;
-    text-align: left;
-}
-
-.quote{
-    display: flex;
-    margin: -45px 5px 5px 360px;
-}
-
-.ul_1 li {
-    display: inline-block;
-    margin-right: 15px;
-}
-
-.ul_1 li a {
-    text-decoration: none;
-    color: #000; 
-    padding: 2px 10px;
-    display: inline-block;
-}
-
-.ul_1 li a:hover {
-    text-decoration: underline;
-    text-decoration-color:rgb(98, 235, 216);
-    text-decoration-thickness: 2px;
-}
-
-@media screen and (max-width: 600px) {
-    
+@media screen and (max-width: 400px) {
+    .container{
+        flex: 1fr;
+    }
 }
