--- a/mystyle.css
+++ b/mystyle.css
@@ -75,7 +75,9 @@ hr{
 
 @media screen and (max-width: 400px) {
     .container{
-        flex: 1fr;
+        display: grid;
+        grid-template-columns: 1fr;
+        text-align: left;
     }
 }
 
