--- a/mystyle.css
+++ b/mystyle.css
@@ -4,7 +4,7 @@
     "big big big big big"
     "menu content content content content"
     "menu Footer Footer Footer Footer";
-    grid-template-columns: 300px auto;
+    grid-template-columns: 200px auto;
     grid-template-rows:auto auto;
     gap: 2px;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -95,8 +95,8 @@
 }
 
 img{
-    width: 150px;
-    height: 200px;
+    width: 100%;
+    height: auto;
     align-items: center;
     border: 1px solid rgba(184, 230, 227, 0.438);
 }
@@ -105,11 +105,18 @@ hr{
     height: 2px;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 480px) {
     .container{
         display: grid;
         grid-template-columns: 1fr;
         text-align: left;
+        font-size: small;
+    }
+
+    img{
+        width: 50%;
+        height: auto;
+        max-width: 50%;
     }
 }
 
