--- a/mystyle.css
+++ b/mystyle.css
@@ -100,8 +100,11 @@ img{
     .container{
         display: grid;
         grid-template-columns: 1fr auto;
-        text-align: justify;
         font-size: smaller;
+    }
+
+    .content{
+        text-align: justify;
     }
 }
 
